--- a/main.html
+++ b/main.html
@@ -6,7 +6,21 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color: yellow; text-align: center;">
+	<div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>
+		Flowers are the most beautiful part of nature, symbolizing freshness, happiness, and positivity. 
+        They come in different colors, shapes, and sizes, making the world more vibrant.
+		</p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>
+			Roses are one of the most popular flowers, known for their beauty and fragrance. 
+            They are often associated with love, passion, and elegance, and come in a variety of colors.
+		</p>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
